fix: adding to the fix of carrousel bubble on mobile.

--- a/portfolio/src/components/cssModules/Carrousel.module.scss
+++ b/portfolio/src/components/cssModules/Carrousel.module.scss
@@ -32,7 +32,7 @@
 
 .item img {
   width: 100%;
-  height: auto;
+  height: 70px;
   aspect-ratio: 1 / 1;
   display: block;
   border-radius: 50%;
@@ -73,6 +73,7 @@
 
   .item img {
     padding: 0.5rem;
+    height: 90px;
   }
 
   .label {
@@ -94,6 +95,7 @@
 
   .item img {
     padding: 0.6rem;
+    height: 110px;
   }
 
   .label {
